--- a/index.html
+++ b/index.html
@@ -814,6 +814,42 @@
         top:12px;
       }
     }
+    /* ✅ Mobilde takım isimlerini güzel göster (2 satır, clamp) */
+@media (max-width: 680px){
+  /* buton genişlesin, ortalansın */
+  .teamBtn{
+    width:100%;
+    justify-content:center;
+    padding:8px 10px;
+  }
+
+  /* artık tek satır + ellipsis değil, 2 satır */
+  .home span, .away span{
+    white-space: normal !important;
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
+
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;   /* ✅ 2 satır göster */
+    line-clamp: 2;
+
+    max-width: 100%;
+    text-align: center;
+    font-size: 15px;
+    line-height: 1.15;
+  }
+
+  /* home/away hizası mobilde daha temiz */
+  .home, .away{
+    justify-content:center;
+  }
+
+  /* skor alanı da ortalansın */
+  .scoreBadge{
+    justify-content:center;
+  }
+}
   </style>
 </head>
 
